fixed mobile overflow

--- a/stylesheet/app.css
+++ b/stylesheet/app.css
@@ -1,5 +1,6 @@
 body {
   font-family: "Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif !important; 
+  overflow-x: hidden;
 }
 
 .title {
